# onetagger

./: .gitignore  AI_IMPLEMENTATION_PLAN.md  AI_SUMMARY.md  Cargo.toml
bulk-tag-utility/: BulkTagUtility.spec  README.md  build_exe.bat  build_exe.sh  bulk_tag_utility.py  requirements.txt
client/: package-lock.json
client/src/: App.vue
client/src/components/: BulkOperations.vue  QuickTagMoods.vue  QuickTagRight.vue  QuickTagTile.vue  QuickTagTileThin.vue  Settings.vue
client/src/scripts/: onetagger.ts  quicktag.ts  router.ts
client/src/views/: AICustomTags.vue  BulkTag.vue  QuickTag.vue  TagEditor.vue
crates/onetagger-ai/: Cargo.toml  README.md
crates/onetagger-ai/src/: api.rs  classifier.rs  config.rs  duplicates.rs  embeddings.rs  features.rs  lib.rs  playlist.rs  quality.rs  tagger.rs
crates/onetagger-autotag/: Cargo.toml
crates/onetagger-autotag/src/: platforms.rs
migration/: README.md  migrate_tags.py  mp3tag-actions.mta  test_migration.py  validate_migration.py
tools/: README.md  quick_tag_actions.py  tag_editor_gui.py
